// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`goatfmtrc overrides > Prettier options override - only enabled for specific files 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/prettier_overrides
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 5 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > Tailwind CSS override - different options per file (cache test) 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/tailwindcss_options
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > basic file pattern override with excludeFiles 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/basic
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 7 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > editorconfig root section applies with goatfmtrc overrides 1`] = `
"--------------------
arguments: --check test.js
working directory: goatfmtrc_overrides/fixtures/editorconfig_root_only
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > goatfmtrc overrides take precedence over editorconfig 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/priority_over_editorconfig
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > multiple overrides - later overrides take precedence 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/multiple_overrides
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 5 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > object option reset to defaults via \`true\` in override 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/bool_reset_override
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 4 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`goatfmtrc overrides > pattern with slash - matches only specified path 1`] = `
"--------------------
arguments: --check .
working directory: goatfmtrc_overrides/fixtures/path_with_slash
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 3 files using 1 threads.
--- STDERR ---------

--------------------"
`;
